--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -7,6 +7,24 @@ h1{
     text-align: center;
     padding: 50px;
 }
+h1::after{
+    content: ' ';
+    padding-left: 30px;
+    color: #fff;
+    width: 526px;
+    margin-left: 20px;
+    background: #000;
+    animation: textrotate 5s linear infinite;
+    -webkit-animation: textrotate 5s linear infinite;
+  }
+  @keyframes textrotate{
+    0%{
+      content: 'creemos?';
+    }
+    100%{
+      content: 'confiamos?';
+    }
+  }  
 .container-fluid{
     background: rgb(238,174,202) !important;
     background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(237,208,133,1) 100%) !important;
@@ -19,7 +37,7 @@ h1{
     height: 100%;
     font-family: Arial;
 }
-  
+ 
 .linea-tiempo::before {
     content: '';
     position: absolute;
@@ -29,7 +47,7 @@ h1{
     height: 100%;
     border-radius: 10px;
 }
-  
+ 
 .momento {
     position: relative;
     width: 45%;
@@ -48,17 +66,17 @@ h1{
     background-color: #000;
     border-radius: 50%;
 }
-  
+ 
 .momento:nth-child(even)::after {
     left: calc(-11.11% - 8.5px);
 }
-  
+ 
 .momento h3 {
     margin: 10px 0px;
     font-size: 30px;
     text-align: center;
 }
-  
+ 
 .momento .descripcion {
     background-color: #eee;
     border-radius: 10px;
@@ -66,7 +84,7 @@ h1{
     line-height: 22px;
     font-size: 14px;
 }
-  
+ 
 .momento .descripcion::after {
     content: '';
     position: absolute;
@@ -78,12 +96,12 @@ h1{
     border-bottom: 10px solid transparent;
     border-left: 12px solid #000000;
 }
-  
+ 
 .momento:nth-child(even) .descripcion {
     background-color: #eee;
     color: rgb(0, 0, 0);
 }
-  
+ 
 .momento:nth-child(even) .descripcion::after{
     left: -10px;
     border-top: 10px solid transparent;
@@ -91,32 +109,7 @@ h1{
     border-right: 12px solid #000000;
     border-left: none;
  }
- /*Probando cosas
-.c{
-    width: 100px;
-    height: 100px;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    margin: 50px;
-}
-    background-color: aqua;
-    border: solid 1px black;
-}
-.c2{
-    background-color: rgb(38, 82, 82);
-    border: solid 1px black;
-}
-.c:hover{
-transform: scale(1.4);
-transition: all 2s;
-}
-.contenedordeburbujas{
-    background-color: rgb(83, 81, 81);
-    margin-left: 30px;
-    margin-right: 30px;
-}
-*/
+
 .fa-brands{
     font-size: 35px;
     color: rgb(255, 255, 255);
@@ -125,10 +118,108 @@ transition: all 2s;
     color: rgb(16, 199, 199);
 }
 
+
 /*Seccion Ministerios*/
+@import url(https://fonts.googleapis.com/css?family=Varela+Round);
+body{
+  zoom:1;
+}
+.nav-list{
+  list-style:none; 
+}
 
+.nav-list a{
+  text-decoration:none;
+  transition:color 0.3s ease-out;
+  color:inherit;
+}
+.nav-list li{
+  position:relative;
+  display:inline-block;
+  margin:9px;
+  letter-spacing:-1px;
+}
+.download:after, 
+.download:before,
+.download a:after, 
+.download a:before{
+  background-color:#CEDD3E;
+}
+
+.download:hover{
+  color:#CEDD3E
+}
+
+.features:after, 
+.features:before,
+.features a:after, 
+.features a:before{
+  background-color:#F27132;
+}
+.method:after, 
+.method:before,
+.method a:after, 
+.method a:before{
+  background-color:#85C3E9;
+}
+
+.method:hover{
+  color:#85C3E9;
+}
+
+.purchase:after, 
+.purchase:before,
+.purchase a:after, 
+.purchase a:before{
+  background-color:#FDBE2A;
+}
+
+.purchase:hover{
+  color:#FDBE2A;
+}
+.nav-list li:after, 
+.nav-list li:before, 
+.nav-list  a:before, 
+.nav-list  a:after{
+  position:absolute;
+  content:'';
+  border-radius:4px;
+}
+.nav-list li:after,
+.nav-list li:before{
+  bottom:-4px;
+  height:4px;
+}
+.nav-list li:not(.selected):before{
+  left:0;
+  right:-2px;
+}
+.nav-list li.selected:after{
+  left:0;
+  right:39px; 
+}
+.nav-list li.selected:before{
+  right:-2px;
+  width:13px;
+}
+.nav-list .selected a:before{
+  height:22px;
+  width:4px;
+  bottom:-22px;
+  right:7px;
+}
+.nav-list .selected a:after{
+  height:4px;
+  width:40px;
+  bottom:-13px;
+  right:5px;
+  transform:rotate(30deg);
+}
+.wrapper{
+  width:500px;
+  margin:0 auto;
+}
 /*Seccion Capacitaciones*/
-
 .embed-container {
     position: relative;
     padding-bottom: 10%;
@@ -151,14 +242,14 @@ transition: all 2s;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 200px;
+    gap: 5px;
 }
 .card-imagenes{
     background-color: #eee;
 }
 .embed-container{
     background-color: #88a8a8 !important;
-    margin: 0 auto !important; 
+    margin: 0 auto !important;
 }
 .card-section{
     padding: 35px;
@@ -169,17 +260,85 @@ transition: all 2s;
 .card-title{
     color: rgb(28, 106, 129) !important;
 }
+/*Seccion preguntas frecuentes*/
+.preguntas-frecuentes {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 50px;
+  }
+  
+  .pregunta {
+    background-color: #f1f1f1;
+    padding: 20px;
+    border-radius: 30px;
+  }
+  
+  h5 {
+    margin-top: 0;
+  }
+
+
 /*Seccion Contacto */
+.mapa-y-contacto {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 50px;
+  }
+  
+  .mapa {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+  
+  .formulario {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+  
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  
+  label {
+    font-weight: bold;
+  }
+  
+  input,
+  textarea {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    padding: 10px;
+    width: 100%;
+  }
+  
+  button[type="submit"] {
+    background-color: #008080;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+  }
 
 /*Footer*/
-.ude{
-    width: 50px;
-    height: 50px;
-}
 footer {
     background-color: #333;
     color: #fff;
     padding: 10px;
+    margin: 50px;
     text-align: center;
     margin-left: 30px;
     margin-right: 30px;
@@ -214,4 +373,48 @@ footer ul li a {
 .linea-tiempo h3:hover{
     transform: scale(1.3);
     transition: all 1s;
+}
+/*Contacto*/
+.header {
+    color: rgb(145, 124, 133);
+    font-size: 27px;
+    padding: 10px;
+}
+.map-responsive{
+
+
+    overflow:hidden;
+
+
+    padding-bottom:56.25%;
+
+
+    position:relative;
+
+
+    height:0;
+
+
+}
+.map-responsive iframe{
+
+
+    left:30%;
+
+
+    top:0;
+
+
+    height:100%;
+
+
+    width:100%;
+
+
+    position:absolute;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
 }
